web/src/components/Common/Hero/Hero.module.scss
@import '_backline-mixins';
@import 'setting';

.Hero {
  width: 100%;
  position: relative;
  overflow: hidden;
  // margin-top: 30px;
}

.Overlay {
  position: absolute;
  width: 100%;
  height: 102%;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='polka-dots' x='0' y='0' width='1.5' height='1.5' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%231E1E1E' shape-rendering='crispEdges' cx='0.5' cy='0.5' r='0.5' /%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' width='100%25' height='100%25' fill='url(%23polka-dots)' /%3E%3C/svg%3E");
  background-color: rgba(0, 0, 0, 0.4);

  @include mq($breakpoint-tablet) {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='polka-dots' x='0' y='0' width='3' height='3' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%231E1E1E' shape-rendering='geometricPrecision'%0Acx='2' cy='2' r='1' /%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' width='100%25' height='100%25' fill='url(%23polka-dots)' /%3E%3C/svg%3E");
  }
}

.VideoFrame {
  display: block;
}

.Content {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  padding: spacing(2);
  max-width: 95%;

  @include mq($breakpoint-mobile-large) {
    padding: spacing(4);
    max-width: 85%;
  }

  @include mq($breakpoint-mobileLandscape) {
    padding: spacing(6);
    max-width: 75%;
  }

  @include mq($breakpoint-tablet) {
    padding: spacing(8) spacing(8);
    max-width: 60%;
  }

  @include mq($breakpoint-tabletLandscape) {
    padding: spacing(10) spacing(10);
    max-width: 60%;
  }

  @include mq($breakpoint-desktop) {
    padding: spacing(12) spacing(12);
  }

  @include mq($breakpoint-desktopMedium) {
    padding: spacing(15) spacing(10);
  }
}

.Title {
  color: $color-primary-white;
  padding-bottom: spacing(2);

  @include mq($breakpoint-desktop) {
    font-size: 4.5vw;
    line-height: 5vw;
  }
}

.Subtitle {
  color: $color-primary-white;
  @include mq($breakpoint-desktop) {
    font-size: 2.5vw;
    line-height: 3vw;
  }
}

